k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-container
  ports:
    - port: 8442
      targetPort: 8442
  type: NodePort
