k8s/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-container
  ports:
    - port: 8444
      targetPort: 8444
  type: ClusterIP
