k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb2
spec:
  selector:
    matchLabels:
      app: mysqldb2
  replicas: 2
  template:
    metadata:
      labels:
        app: mysqldb2
    spec:
      containers:
      - name: mysqldb2
        image: mysql:8.0
        ports:
        - containerPort: 3306
      nodeSelector:
        role: backend
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb2
spec:
  selector:
    app: mysqldb2
  ports:
    - port: 3306
      targetPort: 3306
