k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-container
  ports:
    - port: 8445
      targetPort: 8445
  type: ClusterIP
