k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisdb
spec:
  selector:
    matchLabels:
      app: redisdb
  replicas: 1
  template:
    metadata:
      labels:
        app: redisdb
    spec:
      containers:
      - name: redisdb
        image: redis:latest
        ports:
        - containerPort: 6379
      nodeSelector:
        role: backend
---
apiVersion: v1
kind: Service
metadata:
  name: redisdb
spec:
  selector:
    app: redisdb
  ports:
    - port: 6379
      targetPort: 6379
