k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisdb
spec:
  selector:
    app: redisdb
  ports:
    - port: 6379
      targetPort: 6379
