k8s/store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-container
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store-container
  template:
    metadata:
      labels:
        app: store-container
    spec:
      containers:
      - name: store-container
        image: us-chicago-1.ocir.io/axswp1b7lgyy/springbootstore/store
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
        volumeMounts:
          - name: wallet-volume
            mountPath: /app/wallet

      volumes:
        - name: wallet-volume
          secret:
            secretName: wallet-secret
      imagePullSecrets:
      - name: ocirsecret
---
apiVersion: v1
kind: Service
metadata:
  name: store-service
spec:
  selector:
    app: store-container
  ports:
    - port: 8443
      targetPort: 8443
  type: ClusterIP
