k8s/store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-service
spec:
  selector:
    app: store-container
  ports:
    - port: 8443
      targetPort: 8443
  type: ClusterIP
